--- a/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadDocumentsUploader.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadDocumentsUploader.cshtml
@@ -13,6 +13,8 @@
             @Html.HiddenFor(m => m.ObjITReturnDetails.FYAYID, Model.ObjITReturnDetails.FYAYID)        
             @Html.HiddenFor(m => m.ObjITReturnDetails.CompanyName, Model.ObjITReturnDetails.CompanyName)
             @Html.HiddenFor(m => m.ObjITReturnDetails.ITSectionID, Model.ObjITReturnDetails.ITSectionID)
+            @Html.HiddenFor(m => m.ObjITReturnDetails.ITSectionCategoryID, Model.ObjITReturnDetails.ITSectionCategoryID)
+
 
             <div>
                 <a href="#myModal_@(Model.ITHeadObject.Id.ToString())" role="button" class="btn" data-toggle="modal">
