Added changes for date fields in ITReturnDEtails table And added partial view to handle common logic Modified SPs to handle new fields

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -3,6 +3,14 @@
     ViewBag.Title = "Input Sheet";
     Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
+<style type="text/css">
+    .table-condensed {
+        width: 200px;
+        height: 10px;
+        font-size: 10px;
+    }
+</style>
+
 <h3>Input Sheet</h3>
 
 <div class="container">
