--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -129,7 +129,8 @@
                     Model.ITHeadMasterList,
                     Model.ITReturnDetailsObject,
                     Model.ExtensionList,
-                    Model.ITHeadDocumentsUploaderModels))
+                    Model.ITHeadDocumentsUploaderModels,
+                    Model.ITHeadSpecialIncomeModels))
             }
             if (itHead == "IncomeFromOtherSources")
             {
