--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ItSubHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ItSubHeadDetails.cshtml
@@ -12,7 +12,8 @@
                style="display:none;" class="chkSubHeadLabel">Is Allowance</label>
         <img src="~/images/plus.png"
              class="imgSubHead"
-             style="width:20px;height:20px;" />
+             style="width:20px;height:20px;" 
+             title="Click to add sub head"/>
         <img src="~/images/save.png"
              class="imgSubHeadSave"
              style="width:20px;height:20px;display:none;" />
