--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -18,6 +18,7 @@
         <table class="table table-hover">
             <thead>
                 <tr>
+                    @Html.Hidden("hdNewSpIncomeRecordCount", "0")
                     <th colspan="2">Company Name</th>
                     <th>Financial Year</th>
                     <th>Assesment Year</th>
@@ -77,6 +78,31 @@
 @section scripts
 {
     <script type="text/javascript">
+        var sptemplates =
+        {
+            trSpIncomeRow: function () {/*
+               <tr>
+                    <td>
+                        <input id="SPIncomeDescription_{0}" name="SPIncomeDescription_{0}" style="width:300px;" type="text">
+                    </td>
+                    <td>
+                        <input class="numericOnly" id="SPIncomeValue_{0}" name="SPIncomeValue_{0}" type="text">
+                    </td>
+                    <td>
+                        <input class="numericOnly" id="TaxRate_{0}" name="TaxRate_{0}" type="text">
+                    </td>
+                    <td>
+                        <div class="input-group date form_datetime HLV_clacInput" data-date="" data-date-format="dd M yyyy" data-link-field="SPIncomeDate_{0}" data-link-format="dd/M/yyyy">
+                            <input class="form-control" id="SPIncomeDate_{0}" name="SPIncomeDate_{0}" size="16" type="text" >
+                            <span class="input-group-addon">
+                                &nbsp;&nbsp;<i class="fa fa-calendar fa-2x" aria-hidden="true">
+                                </i>
+                            </span>
+                        </div>
+                    </td>
+                </tr>
+	        */}.toString().slice(14, -3)
+        }
 
         $(document).ready(function () {            
             $("#FYAYId").change(function () {
@@ -203,6 +229,23 @@
                             },
                             contentType: "application/json",
                             dataType: 'json'
+                        });
+                    });
+
+                    $(".btn-add-row").click(function (event) {
+                        console.log($("#hdNewSpIncomeRecordCount").val());
+                        $("#hdNewSpIncomeRecordCount").val(parseInt($("#hdNewSpIncomeRecordCount").val()) - 1);
+                        console.log($("#hdNewSpIncomeRecordCount").val());
+                        $("tr.trSpIncomeDetails:last").after(sptemplates.trSpIncomeRow.split('{0}')
+                            .join($("#hdNewSpIncomeRecordCount").val()));
+                        $('.form_datetime').datetimepicker({
+                            weekStart: 1,
+                            todayBtn: 1,
+                            autoclose: 1,
+                            todayHighlight: 1,
+                            startView: 2,
+                            minView: 2,
+                            forceParse: 0
                         });
                     });
                 }
