--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
@@ -92,10 +92,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                             data-date="" data-date-format="dd M yyyy"
                             data-link-field="ITReturnDetailsObject_AdvanceTax1installmentDate"
-                            data-link-format="dd/M/yyyy">
+                            data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax1installmentDate
                         , Model.ITReturnDetailsObject.AdvanceTax1installmentDate.HasValue
-                        ? Model.ITReturnDetailsObject.AdvanceTax1installmentDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.AdvanceTax1installmentDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -118,10 +118,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_AdvanceTax2installmentDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax2installmentDate
                         , Model.ITReturnDetailsObject.AdvanceTax2installmentDate.HasValue
-                        ? Model.ITReturnDetailsObject.AdvanceTax2installmentDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.AdvanceTax2installmentDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -144,10 +144,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_AdvanceTax3installmentDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax3installmentDate
                         , Model.ITReturnDetailsObject.AdvanceTax3installmentDate.HasValue
-                        ? Model.ITReturnDetailsObject.AdvanceTax3installmentDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.AdvanceTax3installmentDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -170,10 +170,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_AdvanceTax4installmentDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax4installmentDate
                         , Model.ITReturnDetailsObject.AdvanceTax4installmentDate.HasValue
-                        ? Model.ITReturnDetailsObject.AdvanceTax4installmentDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.AdvanceTax4installmentDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -287,10 +287,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_RefundAdjustedDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.RefundAdjustedDate
                         , Model.ITReturnDetailsObject.RefundAdjustedDate.HasValue
-                        ? Model.ITReturnDetailsObject.RefundAdjustedDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.RefundAdjustedDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -313,10 +313,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_RegularAssessmentDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.RegularAssessmentDate
                         , Model.ITReturnDetailsObject.RegularAssessmentDate.HasValue
-                        ? Model.ITReturnDetailsObject.RegularAssessmentDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.RegularAssessmentDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
@@ -340,10 +340,10 @@
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
                          data-date="" data-date-format="dd M yyyy"
                          data-link-field="ITReturnDetailsObject_RefundAlreadyReceivedDate"
-                         data-link-format="dd/M/yyyy">
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.RefundAlreadyReceivedDate
                         , Model.ITReturnDetailsObject.RefundAlreadyReceivedDate.HasValue
-                        ? Model.ITReturnDetailsObject.RefundAlreadyReceivedDate.Value.ToShortDateString()
+                        ? Model.ITReturnDetailsObject.RefundAlreadyReceivedDate.Value.ToString("dd MMM yyyy")
                         : string.Empty
                         , new
                         {
