--- a/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadSpecialIncome.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadSpecialIncome.cshtml
@@ -8,6 +8,9 @@
             @Html.HiddenFor(m => m.ObjSPIncomeDetails.ITReturnDetailsId
             , Model.ObjSPIncomeDetails.ITReturnDetailsId)
             @Html.HiddenFor(m => m.ObjITReturnDetails.Id, Model.ObjITReturnDetails.Id)  
+            @Html.HiddenFor(m => m.ObjITReturnDetails.FYAYID, Model.ObjITReturnDetails.FYAYID)
+            @Html.HiddenFor(m => m.ObjITReturnDetails.ITSectionCategoryID, Model.ObjITReturnDetails.ITSectionCategoryID)  
+            @Html.HiddenFor(m => m.ObjITReturnDetails.ITSectionID, Model.ObjITReturnDetails.ITSectionID)
             <div>
                 <a href="#spIncomeModal_@(Model.ITHeadObject.Id.ToString())" 
                    role="button" class="btn" data-toggle="modal">
@@ -27,9 +30,8 @@
                             </button>
                         </div>
                         <div class="modal-body">
-
-                            <table class="table table-hover tblITRetDetails">
-                                <thead>
+                            <table class="table table-hover tblSPIncomeDetails">
+                                <thead class="thSPIncomeDetails">
                                     <tr>
                                         <th>Description</th>
                                         <th>Value</th>
@@ -65,7 +67,7 @@
                                                 <div class="input-group date form_datetime HLV_clacInput"
                                                      data-date="" data-date-format="dd M yyyy" 
                                                      data-link-field= @("SPIncomeDate_"+ item.Id.ToString())
-                                                     data-link-format="dd/M/yyyy">
+                                                     data-link-format="dd M yyyy">
                                                     @Html.TextBox("SPIncomeDate_" + item.Id.ToString()
                                                          , item.SPIncomeDate.HasValue
                                                          ? item.SPIncomeDate.Value.ToString("dd MMM yyyy")
